deciding for time sake to make introduction a stretch goal.. but as of this point i am going to run through my app one time looking for loose console logs in the console or any errors i may find... if i see obvious errors in code as in spacing i will fix them but that will also need to be revisited at a later date like my read me...i have completed mvp for this app and one stretch goal. i will add a list of other stretch goals i have to my readme on monday november the 13th.

--- a/main.css
+++ b/main.css
@@ -122,10 +122,5 @@
   transform: translate(50%, 0);
 }
 
-.card {
-  max-height: 55%;
-  max-width: 100%;
-  background-color:#bf99308c;
-  padding-bottom: 15%;
-  margin: 5%;
-}
+
+
